# ai-swarm

./: .gitignore  CLAUDE.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: codex-task.yml
.github/workflows/: ci.yml
bridge/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
bridge/src/: index.ts  types.ts
bridge/test/: bridge.test.ts
docs/: architecture.md  codex-workflow.md  execution-plan.md  mqtt-topics.md  smoke-test-results.md  smoke-test-runbook.md  task-format.md
infra/: README.md  cloudflare-deploy.md  github-webhook-setup.md  hivemq-setup.md  tailscale-setup.md  worker-deployment.md
schema/: task.schema.json
scripts/: smoke-test.sh  smoke-test.test.sh
worker/: claude.go  config.go  github.go  go.mod  main.go  mqtt.go  pyproject.toml  task.go  task_test.go
worker/src/ai_swarm_worker/: claude.py  config.py  executor.py  github.py  heartbeat.py  main.py  mqtt.py  task.py
worker/tests/: test_config.py  test_executor.py  test_github.py  test_heartbeat.py  test_mqtt.py  test_task.py
worker/typings/paho/mqtt/: client.pyi
worker/typings/pydantic_settings/: __init__.pyi
