[project]
name = "ai-swarm-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "paho-mqtt>=2.1",
    "click>=8.1",
]

[project.scripts]
worker = "ai_swarm_worker.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_swarm_worker"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pyright>=1.1",
    "ruff>=0.8",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
